--- a/languages/en.json
+++ b/languages/en.json
@@ -5,5 +5,6 @@
   "ryan_gosling": "Ryan Gosling",
   "cat": "Pop Cat",
   "filth": "Filth",
-  "papanya": "Papanya"
+  "papanya": "Papanya",
+  "about_papi4": "Papich, aka Vitaly \"Artas\" loudly (Tsal), is a popular streamer. Best known among the Russian-speaking population and in the CIS countries for the game \"Dota2\""
 }
