--- a/languages/ru.json
+++ b/languages/ru.json
@@ -5,5 +5,6 @@
   "ryan_gosling": "Райн Гослин",
   "cat": "Кот",
   "filth": "Грязь",
-  "papanya": "Папич"
+  "papanya": "Папич",
+  "about_papi4": "Папич, он же Виталий «Артас» громяко (Цаль), - популярный стример. Наиболее известен среди русскоязычного населения и в странах СНГ по игре «Dota2»"
 }
